移動先のページを増やしました

--- a/さがすぽgababenn/リスインF.index.html
+++ b/さがすぽgababenn/リスインF.index.html
@@ -10,6 +10,8 @@
            <!-- Core theme CSS (includes Bootstrap)-->
            <link href="css/styles.css" rel="stylesheet" />
            <link href="css/リスイン.css" rel="stylesheet" />
+           <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
         </head>
       <body id="リスイン"> 
           <!-- Navigation-->
@@ -17,17 +19,17 @@
           <nav id="sidebar-wrapper">
               <ul class="sidebar-nav">
                   <li class="sidebar-brand"><a href="page-top.index.html">さがすぽっと</a></li>
-                  <li class="sidebar-nav-item"><a href="#page-top.index.html">Home</a></li>
+                  
                   <li class="sidebar-nav-item">アカウント名</li>
                   <li class="sidebar-nav-item"><a href="アカウント情報.index.html">アカウント情報</a></li>
                   <li class="sidebar-nav-item"><a href="投稿.index.html">投稿</a></li>
                   <li class="sidebar-nav-item"><a href="ブックマーク.index.html">ブックマーク</a></li>
-                  <li class="sidebar-nav-item"><a href="#お知らせ">お知らせ</a></li>
-                  <li class="sidebar-nav-item"><a href="#お問い合わせ">お問い合わせ</a></li>
-                  <li class="sidebar-nav-item"><a href="#利用規約">利用規約</a></li>
-              </ul>
+                  <li class="sidebar-nav-item"><a href="#お知らせ.index.html">お知らせ</a></li>
+                <li class="sidebar-nav-item"><a href="#お問い合わせ.index.html">お問い合わせ</a></li>
+                <li class="sidebar-nav-item"><a href="#利用規約.index.html">利用規約</a></li>
+             </ul>
           </nav>
-         　 <script src="js/scripts.js"></script>
+         　 
 
         <h1> <p> 
             <form action="URL" method="post">
