--- a/さがすぽgababenn/検索.index.html
+++ b/さがすぽgababenn/検索.index.html
@@ -9,11 +9,11 @@
            <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
            <!-- Core theme CSS (includes Bootstrap)-->
            <link href="css/styles.css" rel="stylesheet" />
-            <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-       　　　
+           <!-- Core theme JS-->
+           <script src="js/scripts.js"></script>
         </head>
-      <body id="ブックマーク"> 
+        
+      <body id="検索"> 
           <!-- Navigation-->
           <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
           <nav id="sidebar-wrapper">
