リスイン修正（改行）

--- a/さがすぽgababenn/リスインF.index.html
+++ b/さがすぽgababenn/リスインF.index.html
@@ -33,12 +33,12 @@
 
         <h1> <p> 
             <form action="URL" method="post">
-            　　 <input type="checkbox" name="リスイン" value="お気に入り" checked id="c1">
-                 <label for="c1">お気に入り</label>
-             　　<input type="checkbox" name="リスイン" value="行きたい" checked id="c2">
-             　　<label for="c2">行きたい</label>
-            　　 <input type="checkbox" name="リスイン" value="行ってきた" checked id="c3">
-                 <label for="c3">行ってきた</label>
+            　　 <p><input type="checkbox" name="リスイン" value="お気に入り" checked id="c1">
+                 <label for="c1">お気に入り</label></p>
+             　　<P><input type="checkbox" name="リスイン" value="行きたい" checked id="c2">
+             　　<label for="c2">行きたい</label></P>
+            　　<p> <input type="checkbox" name="リスイン" value="行ってきた" checked id="c3">
+                 <label for="c3">行ってきた</label></p>
          　 </form></h1>
          </p>
          　<p><h2>
