--- a/login/login2.html
+++ b/login/login2.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <meta charset="utf-8">
-     <title>さがすぽっと</title>
-     <link rel="style sheet"
-     href="login2.css">
+    <meta charset="utf-8" />
+    <title>さがすぽっと</title>
+    <link rel="stylesheet" href="login2.css" />
   </head>
   <body>
-     <div class="logo">
-         <img src="./ログイン1/ロゴ_211110.jpg"width="50%"height="50%">
-     </div>
-     <div class="loginform">
-         
-         <form method="post">
-             <label for="username">ユーザー名</label>
-             <imput type="text" id="username" name="name">
-             <label for="password">パスワード</label>
-             <imput type="password" id="password" name="password"><br>
-             <label for="mailaddress">メールアドレス</label>
-             <imput type="text" id="mailaddress" name="mailaddress"><br>
-             <button type="submit" class="abtn">アカウント作成</button>
-             <button type="submit" class="lbtn">ログイン</button><br>
-         </form>
-     </div>
+    <div class="logo">
+      <img src="./ログイン1/ロゴ_211110.jpg" width="50%" height="50%" />
+    </div>
+    <div class="loginform">
+      <form method="post">
+        <label for="username">ユーザー名</label>
+        <input type="text" id="username" name="name" />
+        <label for="password">パスワード</label>
+        <input type="password" id="password" name="password" /><br />
+        <label for="mailaddress">メールアドレス</label>
+        <input type="text" id="mailaddress" name="mailaddress" /><br />
+        <button type="submit" class="abtn">アカウント作成</button>
+        <button type="submit" class="lbtn">ログイン</button><br />
+      </form>
+    </div>
   </body>
 </html>
