--- a/がばべんお試しで色々してみた/お試しがばべん.html
+++ b/がばべんお試しで色々してみた/お試しがばべん.html
@@ -1,5 +1,34 @@
-<html>
-    <body >
+<!DOCTYPE html>
+    <html lang="ja">
+        <head>
+           <title>アカウント情報</title>
+           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+           <!-- Favicon-->
+           <link rel="icon" type="image/x-icon" href="img/アイコン.jpg" />
+           <!-- Font Awesome icons (free version)-->
+           <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+           <!-- Core theme CSS (includes Bootstrap)-->
+           <link href="css/styles.css" rel="stylesheet" />
+            <!-- Core theme JS-->
+             <script src="js/scripts.js"></script>　　
+        <head>
+    <body id="page-top">
+　　　　　　<!-- メニューバー-->
+          <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+          <nav id="sidebar-wrapper">
+              <ul class="sidebar-nav">
+                  <li class="sidebar-brand"><a href="page-top.index.html">さがすぽっと</a></li>
+                 
+                  <li class="sidebar-nav-item">アカウント名</li>
+                  <li class="sidebar-nav-item"><a href="アカウント情報.index.html">アカウント情報</a></li>
+                  <li class="sidebar-nav-item"><a href="投稿.index.html">投稿</a></li>
+                  <li class="sidebar-nav-item"><a href="ブックマーク.index.html">ブックマーク</a></li>
+                  <li class="sidebar-nav-item"><a href="#お知らせ.index.html">お知らせ</a></li>
+                  <li class="sidebar-nav-item"><a href="#お問い合わせ.index.html">お問い合わせ</a></li>
+                  <li class="sidebar-nav-item"><a href="#利用規約.index.html">利用規約</a></li>
+               </ul>
+          </nav>
+
         <link rel="stylesheet" href="おためし.css">
         <img src="image/画像 -20210927-141113-50d918be.png"class="画像1"><!--1.1倍楽しい画像-->
         <h1>サイトの概要</h1>
