--- a/login1.html
+++ b/login1.html
@@ -3,7 +3,7 @@
   <head>
      <meta charset="utf-8">
      <title>さがすぽっと</title>
-     <link rel="style sheet"
+     <link rel="stylesheet"
      href="login1.css">
   </head>
   <body>
@@ -14,9 +14,9 @@
          
          <form method="post">
              <label for="username">ユーザー名</label>
-             <imput type="text" id="username" name="name">
+             <input type="text" id="username" name="name">
              <label for="password">パスワード</label>
-             <imput type="password" id="password" name="password"><br>
+             <input type="password" id="password" name="password"><br>
              <button type="submit" class="lbtn">ログイン</button><br>
              <button type="submit" class="abtn">アカウント作成</button>
          </form>
