--- a/search2.html
+++ b/search2.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <meta charset="utf-8">
-     <title>さがすぽっと</title>
-     <link rel="stylesheet"
-     href="search2.css">
-     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    </head>
+    <meta charset="utf-8" />
+    <title>さがすぽっと</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" href="search2.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
+    <script src="./index.js"></script>
   </head>
   <body>
-      <form class="form-box" action="URL"method="get"></form>
-      <input class="form-input" type="search" name="search" placeholder="探したい地域から検索">
-      <button class="form-button" type="submit"><img src=./サーチ2/虫眼鏡.jpg width="20px" height="20px"></button>
-      </form><br>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3336.966415153017!2d130.2883733063936!3d33.2411832573018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3541ca8ba597dd67%3A0x77632573b355ab93!2z5L2Q6LOA5aSn5a2m!5e0!3m2!1sja!2sjp!4v1637764036620!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box" />
+    <div id="map" style="width: 100%; height: 80%"></div>
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-FhRMimB5AVeGGANU-xr6agF4_AcTAG8&callback=initAutocomplete&libraries=places&v=weekly" async></script>
   </body>
 </html>
