page jump (home-search login-home)の二つを実装 editのファイル位置を変更 その他cssなどファイル指定のパスを調整

--- a/edit/edit.html
+++ b/edit/edit.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <link rel="stylesheet" href="編集.css">
+        <link rel="stylesheet" href="./edit.css">
 
         <div>
             <span class="batsu"></span>
