--- a/home/home.html
+++ b/home/home.html
@@ -8,9 +8,9 @@
            <!-- Font Awesome icons (free version)-->
            <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
            <!-- Core theme CSS (includes Bootstrap)-->
-           <link href="css/styles.css" rel="stylesheet" />
+           <link href="./styles.css" rel="stylesheet" />
             <!-- Core theme JS-->
-             <script src="js/scripts.js"></script>　　
+             <script src="./js/scripts.js"></script>　　
         <head>
     <body id="page-top">
 　　　　　　<!-- メニューバー-->
@@ -29,8 +29,8 @@
                </ul>
           </nav>
 
-        <link rel="stylesheet" href="おためし.css">
-        <img src="image/画像 -20210927-141113-50d918be.png"class="画像1"><!--1.1倍楽しい画像-->
+        <link rel="stylesheet" href="home.css">
+        <img src="./image/画像 -20210927-141113-50d918be.png"class="画像1"><!--1.1倍楽しい画像-->
         <h1>サイトの概要</h1>
         <span class="下線">さがすぽっと~「佐賀・探す・スポット」~ 
 
@@ -40,7 +40,8 @@
             まずは検索してみましょう！
          </span>
             <p>
-                <a href="#" class="btn-green">さっそく探す</a>  
+                <a href="#" class="btn-green" onclick="location.href='../search/search3.html'">さっそく探す</a>
+  
             </p>
     </body>
     
