--- a/login/login1.html
+++ b/login/login1.html
@@ -15,8 +15,8 @@
         <input type="text" id="username" name="name" />
         <label for="password">パスワード</label>
         <input type="password" id="password" name="password" /><br />
-        <button type="submit" class="lbtn">ログイン</button><br />
-        <button type="submit" class="abtn">アカウント作成</button>
+        <button type="button" class="lbtn" onclick="location.href='../home/home.html'">ログイン</button><br />
+        <button type="button" class="abtn" onclick="location.href='./login2.html'">アカウント作成</button>
       </form>
     </div>
   </body>
