--- a/login/login2.html
+++ b/login/login2.html
@@ -17,8 +17,8 @@
         <input type="password" id="password" name="password" /><br />
         <label for="mailaddress">メールアドレス</label>
         <input type="text" id="mailaddress" name="mailaddress" /><br />
-        <button type="submit" class="abtn">アカウント作成</button>
-        <button type="submit" class="lbtn">ログイン</button><br />
+        <button type="button" class="lbtn" onclick="location.href='../home/home.html'">ログイン</button><br />
+        <button type="button" class="abtn" onclick="location.href='./login1.html'">アカウント作成</button>
       </form>
     </div>
   </body>
