早速探すのリンクの修正 メニューバーの中身のリンクの指定

--- a/home/home.html
+++ b/home/home.html
@@ -22,10 +22,10 @@
                   <li class="sidebar-nav-item">アカウント名</li>
                   <li class="sidebar-nav-item"><a href="アカウント情報.index.html">アカウント情報</a></li>
                   <li class="sidebar-nav-item"><a href="投稿.index.html">投稿</a></li>
-                  <li class="sidebar-nav-item"><a href="ブックマーク.index.html">ブックマーク</a></li>
-                  <li class="sidebar-nav-item"><a href="#お知らせ.index.html">お知らせ</a></li>
+                  <li class="sidebar-nav-item"><a href="ブックマーク.index.html" onclick="location.href='../bookmark/bookmarki1.html'">ブックマーク</a></li>
+                  <li class="sidebar-nav-item"><a href="#お知らせ.index.html" onclick="location.href='../notice/お知らせページ.html'">お知らせ</a></li>
                   <li class="sidebar-nav-item"><a href="#お問い合わせ.index.html">お問い合わせ</a></li>
-                  <li class="sidebar-nav-item"><a href="#利用規約.index.html">利用規約</a></li>
+                  <li class="sidebar-nav-item"><a href="#利用規約.index.html" onclick="location.href='../termes/利用規約ページ.html'">利用規約</a></li>
                </ul>
           </nav>
 
@@ -40,7 +40,7 @@
             まずは検索してみましょう！
          </span>
             <p>
-                <a href="#" class="btn-green" onclick="location.href='../search/search3.html'">さっそく探す</a>
+                <a href="#" class="btn-green" onclick="location.href='../search/search2.html'">さっそく探す</a>
   
             </p>
     </body>
