--- a/home/home.html
+++ b/home/home.html
@@ -1,17 +1,4 @@
 <!DOCTYPE html>
-    <html lang="ja">
-        <head>
-           <title>アカウント情報</title>
-           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-           <!-- Favicon-->
-           <link rel="icon" type="image/x-icon" href="img/アイコン.jpg" />
-           <!-- Font Awesome icons (free version)-->
-           <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
-           <!-- Core theme CSS (includes Bootstrap)-->
-           <link href="./styles.css" rel="stylesheet" />
-            <!-- Core theme JS-->
-             <script src="./js/scripts.js"></script>　　
-        <head>
    
     
     <!-- ここからメニュー -->
@@ -27,12 +14,12 @@
       
       <nav class="nav_content">
         <ul class="nav_list">
-          <li class="nav_item"><a href="home/お試しがばべん.html">ホーム</a></li>
-          <li class="nav_item"><a href="さがすぽgababenn/投稿.indx.html">投稿</a></li>
-          <li class="nav_item"><a href="account/アカウント.html">アカウント</a></li>
-          <li class="nav_item"><a href="bookmark/bookmarki1.html" onclick="location.href='../bookmark/bookmarki1.html'">ブックマーク</a></li>
-          <li class="nav_item"><a href="notice/お知らせページ.html" onclick="location.href='../notice/お知らせページ.html'">おしらせ</a></li>
-          <li class="nav_item"><a href="terms/利用規約ページ.html" onclick="location.href='../termes/利用規約ページ.html'">利用規約</a></li>
+          <li class="nav_item"><a href="お試しがばべん.html">ホーム</a></li>
+          <li class="nav_item"><a href="投稿.indx.html">投稿</a></li>
+          <li class="nav_item"><a href="アカウント.html">アカウント</a></li>
+          <li class="nav_item"><a href="bookmarki1.html" onclick="location.href='../bookmark/bookmarki1.html'">ブックマーク</a></li>
+          <li class="nav_item"><a href="お知らせページ.html" onclick="location.href='../notice/お知らせページ.html'">おしらせ</a></li>
+          <li class="nav_item"><a href="利用規約ページ.html" onclick="location.href='../termes/利用規約ページ.html'">利用規約</a></li>
         </ul>
       </nav>
     </div>
