--- a/terms/利用規約ページ.html
+++ b/terms/利用規約ページ.html
@@ -16,9 +16,9 @@
               <li class="nav_item"><a href="お試しがばべん.html">ホーム</a></li>
               <li class="nav_item"><a href="投稿.indx.html">投稿</a></li>
               <li class="nav_item"><a href="アカウント.html">アカウント</a></li>
-              <li class="nav_item"><a href="bookmarki1.html">ブックマーク</a></li>
-              <li class="nav_item"><a href="お知らせページ.html">おしらせ</a></li>
-              <li class="nav_item"><a href="利用規約ページ.html">利用規約</a></li>
+              <li class="nav_item"><a href="../bookmark/bookmarki1.html">ブックマーク</a></li>
+              <li class="nav_item"><a href="../notice/お知らせページ.html">おしらせ</a></li>
+              <li class="nav_item"><a href="../terms/利用規約ページ.html">利用規約</a></li>
             </ul>
           </nav>
       
